Fix title visibility.

--- a/src/scss/components/metadata/_list.scss
+++ b/src/scss/components/metadata/_list.scss
@@ -269,7 +269,7 @@
 	// Title field
 	.title {
 		@include touch-or-bp-down(sm) {
-			display: none !important;
+			display: none;
 
 			@include state(".metadata-list.editing") {
 				display: flex;
